# chora-clean10

./: .gitignore  Makefile  concatenated.py  mypy.ini  pyproject.toml
chora/: __init__.py  recommender.py
chora/app/: __init__.py  run.py
chora/app/api/: system_routes.py  user_routes.py  utils.py
chora/models/: abstract_model.py  clustering.py  online_models.py
chora/types/: data_schema.py  song_data.py
scripts/: load_transform.py  run_server.sh
tests/: test_clustering.py  test_data_schema.py  test_online_models.py
